[maybe-working?] ASM replaced with with Tarmac
Added everything naming and some of the file bindings to tarmac. AST is
made correctly, but no highlight support as of yet?

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.13)
 
-project(tree-sitter-asm
+project(tree-sitter-tarmac
         VERSION "0.1.0"
         DESCRIPTION "assembly grammar for tree-sitter"
-        HOMEPAGE_URL "https://github.com/RubixDev/tree-sitter-asm"
+        HOMEPAGE_URL "https://example.com/tree-sitter-tarmac"
         LANGUAGES C)
 
 option(BUILD_SHARED_LIBS "Build using shared libraries" ON)
@@ -24,33 +24,33 @@ add_custom_command(OUTPUT "${CMAKE_CURRENT_SOURCE_DIR}/src/parser.c"
                    WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
                    COMMENT "Generating parser.c")
 
-add_library(tree-sitter-asm src/parser.c)
+add_library(tree-sitter-tarmac src/parser.c)
 if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/src/scanner.c)
-  target_sources(tree-sitter-asm PRIVATE src/scanner.c)
+  target_sources(tree-sitter-tarmac PRIVATE src/scanner.c)
 endif()
-target_include_directories(tree-sitter-asm PRIVATE src)
+target_include_directories(tree-sitter-tarmac PRIVATE src)
 
-target_compile_definitions(tree-sitter-asm PRIVATE
+target_compile_definitions(tree-sitter-tarmac PRIVATE
                            $<$<BOOL:${TREE_SITTER_REUSE_ALLOCATOR}>:TREE_SITTER_REUSE_ALLOCATOR>
                            $<$<CONFIG:Debug>:TREE_SITTER_DEBUG>)
 
-set_target_properties(tree-sitter-asm
+set_target_properties(tree-sitter-tarmac
                       PROPERTIES
                       C_STANDARD 11
                       POSITION_INDEPENDENT_CODE ON
                       SOVERSION "${TREE_SITTER_ABI_VERSION}.${PROJECT_VERSION_MAJOR}"
                       DEFINE_SYMBOL "")
 
-configure_file(bindings/c/tree-sitter-asm.pc.in
-               "${CMAKE_CURRENT_BINARY_DIR}/tree-sitter-asm.pc" @ONLY)
+configure_file(bindings/c/tree-sitter-tarmac.pc.in
+               "${CMAKE_CURRENT_BINARY_DIR}/tree-sitter-tarmac.pc" @ONLY)
 
 include(GNUInstallDirs)
 
-install(FILES bindings/c/tree-sitter-asm.h
+install(FILES bindings/c/tree-sitter-tarmac.h
         DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/tree_sitter")
-install(FILES "${CMAKE_CURRENT_BINARY_DIR}/tree-sitter-asm.pc"
+install(FILES "${CMAKE_CURRENT_BINARY_DIR}/tree-sitter-tarmac.pc"
         DESTINATION "${CMAKE_INSTALL_DATAROOTDIR}/pkgconfig")
-install(TARGETS tree-sitter-asm
+install(TARGETS tree-sitter-tarmac
         LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}")
 
 add_custom_target(ts-test "${TREE_SITTER_CLI}" test
