--- a/bindings/c/tree-sitter-tarmac.pc.in
+++ b/bindings/c/tree-sitter-tarmac.pc.in
@@ -2,9 +2,10 @@ prefix=@CMAKE_INSTALL_PREFIX@
 libdir=${prefix}/@CMAKE_INSTALL_LIBDIR@
 includedir=${prefix}/@CMAKE_INSTALL_INCLUDEDIR@
 
-Name: tree-sitter-asm
+Name: tree-sitter-tarmac
 Description: @PROJECT_DESCRIPTION@
 URL: @PROJECT_HOMEPAGE_URL@
 Version: @PROJECT_VERSION@
-Libs: -L${libdir} -ltree-sitter-asm
+Libs: -L${libdir} -ltree-sitter-tarmac
 Cflags: -I${includedir}
+
