--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,23 +3,23 @@ requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "tree-sitter-asm"
-description = "assembly grammar for tree-sitter"
+name = "tree-sitter-tarmac"
+description = "Tarmac trace grammar for tree-sitter"
 version = "0.1.0"
-keywords = ["incremental", "parsing", "tree-sitter", "asm"]
+keywords = ["incremental", "parsing", "tree-sitter", "tarmac"]
 classifiers = [
   "Intended Audience :: Developers",
   "Topic :: Software Development :: Compilers",
   "Topic :: Text Processing :: Linguistic",
   "Typing :: Typed",
 ]
-authors = [{ name = "RubixDev" }]
+authors = [{ name = "tree-sitter-tarmac" }]
 requires-python = ">=3.9"
 license.text = "MIT"
 readme = "README.md"
 
 [project.urls]
-Homepage = "https://github.com/RubixDev/tree-sitter-asm"
+Homepage = "https://example.com/tree-sitter-tarmac"
 
 [project.optional-dependencies]
 core = ["tree-sitter~=0.22"]
